--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,6 @@
-# FastAPI and Server
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-
-# HTTP Client
-httpx==0.26.0
-
-# Image Processing
-Pillow==10.2.0
-
-# Development
-python-multipart==0.0.6
+fastapi~=0.104.0
+uvicorn[standard]~=0.24.0
+httpx~=0.25.0
+python-dotenv~=1.0.0
+pydantic~=2.5.0
+pydantic-settings~=2.1.0
